Only animate opacity for GlobalSearch input to prevent icon jump at end of exit

--- a/website/src/views/layout/GlobalSearch.scss
+++ b/website/src/views/layout/GlobalSearch.scss
@@ -68,7 +68,7 @@ $icon-horizontal-padding: ($container-height - $icon-size) / 2;
   background: transparent;
   cursor: pointer;
 
-  transition: all $desktop-exiting-duration $material-acceleration-curve;
+  transition: opacity $desktop-exiting-duration $material-acceleration-curve;
 
   &:focus {
     outline: none;
